# voice-weather

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-macos.yml  tests.yml
packaging/macos/: VoiceWeather.spec
scripts/: build_macos_app.sh  desktop_entry.py
src/voice_weather/: __init__.py  advice.py  app.py  cities.py  config.py  desktop.py  i18n.py  launcher.py  location.py  settings.py  speech.py  weather.py  web.py
src/voice_weather/web_static/: app.js  city-search.css  dialog.css  health.css  index.html  sidebar.css  styles.css
tests/: test_advice.py  test_cities.py  test_cli.py  test_desktop.py  test_i18n.py  test_launcher.py  test_location.py  test_settings.py  test_speech.py  test_weather.py  test_web.py
