[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-weather"
version = "0.1.0"
description = "A bilingual voice weather console for macOS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "EVC" }]
dependencies = ["requests>=2.31,<3", "urllib3>=1.26,<2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS",
]

[project.scripts]
voice-weather = "voice_weather.app:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
