[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-weather"
version = "3.0.1"
description = "A bilingual voice weather console for macOS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Evc" }]
keywords = ["weather", "voice", "macos", "bilingual", "cli"]
dependencies = ["requests>=2.31,<3", "urllib3>=1.26,<2", "rich>=13.7,<15"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Evc509/voice-weather"
Repository = "https://github.com/Evc509/voice-weather.git"
Issues = "https://github.com/Evc509/voice-weather/issues"
Changelog = "https://github.com/Evc509/voice-weather/blob/main/CHANGELOG.md"

[project.scripts]
voice-weather = "voice_weather.launcher:main"
voice-weather-cli = "voice_weather.app:main"
voice-weather-web = "voice_weather.web:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voice_weather = ["web_static/*.html", "web_static/*.css", "web_static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
